--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   <div class="">
   
                       <div class="input-group mb-3 py-3">
-                          <input id="search"  type="text" class="form-control" placeholder="Find Your Location..." aria-label="Recipient's username" aria-describedby="button-addon2">
+                          <input id="search"  type="text" class="form-control" placeholder="enter your email" aria-label="Recipient's username" aria-describedby="button-addon2">
                           <button class="btn btn-primary" type="button" id="button-addon2">Subscrib</button>
                         </div>
   
