--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
       </div>
 
-      <footer class="foot py-5  ">
+      <footer class="foot py-5 mt-2  ">
 
         <div class="container">
             <div class="row g-2">
